[add] Server.cpp Sever.hpp

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,6 @@
 	"files.associations": {
 		".*lintrc": "json",
 		"*.css": "tailwindcss",
-		"iostream": "cpp",
-		"locale": "cpp"
+		"istream": "cpp"
 	}
 }
